...
            } label: {
                Image(systemName: ImageName.iconClose)
                    .font(.largeTitle)
                    .tint(.black)
            }
            .padding(5)
            .accessibilityIdentifier("close_button")
            
            VStack {
                Text("AD")
                    .font(.title2)
                    .fontWeight(.semibold)
                    .foregroundColor(.black)
...
